Time: 7 ms (86.36%), Space: 54.6 MB (89.39%) - LeetHub